# distributed_lakehouse_project

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  prek.toml  pyproject.toml
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/workflows/: benchmark.yml  ci.yml
config/: config.yaml
src/benchmarks/: compare.py  compute_benchmark.py  format_benchmark.py
src/lakehouse/: bronze.py  gold.py  silver.py  time_travel.py
src/ray_jobs/: feature_engineering.py  main.py  model_scoring.py  simulation.py
src/spark_jobs/: aggregations.py  joins.py  main.py  partition_tuning.py  window_functions.py
src/utils/: config.py  data_gen.py  spark_session.py
tests/: conftest.py  test_benchmarks.py  test_bronze.py  test_data_gen.py  test_gold.py  test_silver.py
